--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Trenton</h1>
+								<h1>Hi, my name is Trenton.</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>I'm a creative writing, concentrating, mainly, on fiction.
+									</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
