--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<h1>Hi, my name is Trenton.</h1>
 							</header>
 							<div class="content">
-								<p>I'm a creative writing, concentrating, mainly, on fiction.
+								<p>I'm a creative writing, concentrating; mainly, on fiction.
 									</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
