--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<section class="split">
 								<section>
 									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
+										<span class="icon alt fa-envelope-square"></span>
 										<h3>Email</h3>
 										<a href="#">information@untitled.tld</a>
 									</div>
