--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<p>I'm a creative writing, concentrating; mainly, on fiction.
 									</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Links</a></li>
 								</ul>
 							</div>
 						</div>
