--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<h1>Hi, my name is Trenton.</h1>
 							</header>
 							<div class="content">
-								<p>I'm a creative writing, concentrating; mainly, on fiction.
+								<p>I'm a creative writing, concentrating; mainly, on fiction. I'm apart of the Starving Artist's entertainment group.
 									</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Links</a></li>
@@ -64,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Podcast</a></h3>
+										<p>A Starving Artists' podcast on franchise fatigue</p>
 									</header>
 								</article>
 								<article>
@@ -73,8 +73,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Video</a></h3>
+										<p>A Starving Artists' documentry about music on the campus of Virginia Tech</p>
 									</header>
 								</article>
 								<article>
@@ -82,8 +82,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Newsletter</a></h3>
+										<p>Comics in the Classrom</p>
 									</header>
 								</article>
 								<article>
@@ -91,8 +91,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Information</a></h3>
+										<p>A small amount of information about me</p>
 									</header>
 								</article>
 							</section>
