--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Newsletter</a></h3>
-										<p>Comics in the Classrom</p>
+										<p>Comics in the Classroom</p>
 									</header>
 								</article>
 								<article>
