--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Information</a></h3>
-										<p>A small amount of information about me</p>
+										<p>A small bit about me</p>
 									</header>
 								</article>
 							</section>
