--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Podcast</a></h3>
-										<p>A Starving Artists' podcast on franchise fatigue</p>
+										<a href="https://soundcloud.com/joshua-graham-397567473/starving-artist-podcast">A Starving Artists' Podcast on Franchise Fatigue</a>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
@@ -77,6 +78,7 @@
 										<p>A Starving Artists' documentry about music on the campus of Virginia Tech</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
@@ -86,6 +88,7 @@
 										<p>Comics in the Classroom</p>
 									</header>
 								</article>
+
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
