--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Podcast</a></h3>
-										<a href="https://soundcloud.com/joshua-graham-397567473/starving-artist-podcast">A Starving Artists' Podcast on Franchise Fatigue</a>
+										<h3><a href="https://soundcloud.com/joshua-graham-397567473/starving-artist-podcast" class="link">Podcast</a></h3>
+										<p> Starving Artists' Podcast on Franchise Fatigue </p>
 									</header>
 								</article>
 
