--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Video</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=3hsVEGUZCAY&t=25s" class="link">Video</a></h3>
 										<p>A Starving Artists' documentry about music on the campus of Virginia Tech</p>
 									</header>
 								</article>
@@ -84,7 +84,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Newsletter</a></h3>
+										<h3><a href="https://tinyletter.com/StarvingArtists/letters/comics-in-the-classroom" class="link">Newsletter</a></h3>
 										<p>Comics in the Classroom</p>
 									</header>
 								</article>
