--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Information</a></h3>
-										<p>A small bit about me</p>
+										<h3><a href="https://gobblerconnect.vt.edu/organization/MC_VT" class="link">Music Club</a></h3>
+										<p>A website for Virginia Tech students who are interested in playing music with fellow hokies</p>
 									</header>
 								</article>
 							</section>
