--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@
 
 				<!-- Banner -->
 					<section id="banner" class="major">
+
 						<div class="inner">
 							<header class="major">
 								<h1>Hi, my name is Trenton.</h1>
 							</header>
+
 							<div class="content">
 								<p>I'm a creative writing, concentrating; mainly, on fiction. I'm apart of the Starving Artist's entertainment group.
 									</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Links</a></li>
 								</ul>
+
 							</div>
 						</div>
+
 					</section>
 
 				<!-- Main -->
@@ -61,7 +65,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/audio-device-macro-55800.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://soundcloud.com/joshua-graham-397567473/starving-artist-podcast" class="link">Podcast</a></h3>
@@ -71,7 +75,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/aperture-audio-blur-274924.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://www.youtube.com/watch?v=3hsVEGUZCAY&t=25s" class="link">Video</a></h3>
@@ -81,7 +85,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/antique-black-and-white-classic-163116.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://tinyletter.com/StarvingArtists/letters/comics-in-the-classroom" class="link">Newsletter</a></h3>
@@ -91,7 +95,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/acoustic-acoustic-guitar-blur-417451.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://gobblerconnect.vt.edu/organization/MC_VT" class="link">Music Club</a></h3>
@@ -104,7 +108,7 @@
 
 
 					</div>
-				
+
 
 					<!-- Footer -->
 						<footer id="footer">
